# exoplanets

./: .funcignore  .gitignore  LICENSE  README.md  Technical Architecture.md  aad.config.json  action_example.json  engine.py  engine_eh.py  environment.yaml  environment_local.yaml  function_app.py  host.json  local_setup.md  manage.py  pyproject.toml  requirements.txt  requirements_azfunc.txt  requirements_azufunc.txt  requirements_webapp.txt
app/: cmdb_graph.py  forms.py  models.py  sync_az_function_lib.py  urls.py  views.py
az-function/: .funcignore  function_app.py  readme.md  requirements.txt  syllables.p
az-functions/: cmdb_graph.py  func_timemanager.py  function_app.py  readme.md  requirements.txt
azfunc-utu-resolveaction/: function_app.py  host.json
azfunc-utu-timer/: function_app.py  readme.md
containers/: Dockerfile  readme.md  requirements.txt  start.sh
data/: PS_2021.02.26_19.09.39.txt  Solar System Data.xlsx  example nodes.json  solar_system_atmosphere.csv  syllables.csv  syllables.p  syllables_dist.p
docs/: Building_and_rendering_3d_ojbects.md  Kusto for App Insights.md  Log_Analytics_and_App_Insights.md  Standards and Conventions.md  Technical Architecture.md  Troubleshooting_azure_functions.md  Troubleshooting_azure_sites.md  creating_a_new_account.md  gremlin query cookbook.md  local_setup.md  notes_on_actions.md  readme.md
func/: function_app.py
functions/: libs_config.yaml  readme.md  requirements.txt  transfer_code.py
infra/: azure-rbac.txt  build_az.ps1  set_local_variables_from_json.ps1  setting-azure-env_vars.md  (+1 more)
web/: backend.py  (+4 more)
(+307 files in other folders)
